syntax = "proto3";

                 package userBankCard;
service UserBankCardService {
 rpc createUserBankCard (UserBankCardCreateInput) returns (UserBankCard) {}
rpc userBankCards (findManyParams) returns (stream UserBankCard) {}
rpc userBankCard (UserBankCardWhereUniqueInput) returns (UserBankCard) {}
rpc updateUserBankCard (UserBankCardUpdateInput) returns (UserBankCard) {}
rpc deleteUserBankCard (UserBankCardWhereUniqueInput) returns (UserBankCard) {} 
 }
message UserBankCardCreateInput {
string createdAt = 1;
int32 cvv = 2;
string expDate = 3;
bool favorite = 4;
string id = 5;
bool main = 6;
string name = 7;
string numberField = 8;
string token = 9;
string updatedAt = 10;
};
message UserBankCard {
string createdAt = 1;
int32 cvv = 2;
string expDate = 3;
bool favorite = 4;
string id = 5;
bool main = 6;
string name = 7;
string numberField = 8;
string token = 9;
string updatedAt = 10;
};
message UserBankCardWhereUniqueInput {
string createdAt = 1;
int32 cvv = 2;
string expDate = 3;
bool favorite = 4;
string id = 5;
bool main = 6;
string name = 7;
string numberField = 8;
string token = 9;
string updatedAt = 10;
};
message UserBankCardUpdateInput {
string createdAt = 1;
int32 cvv = 2;
string expDate = 3;
bool favorite = 4;
string id = 5;
bool main = 6;
string name = 7;
string numberField = 8;
string token = 9;
string updatedAt = 10;
};
message findManyParams {

};